--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "npm run clean && tsc && npm run copy-files",
     "clean": "rimraf dist/",
-    "copy-files": "copyfiles -u 1 model/*.onnx dist/model/",
+    "copy-files": "copyfiles -u 1 model/*.onnx dist/model/ && copyfiles -u 1 src/*.wasm dist/",
     "prepublishOnly": "npm run build"
   },
   "author": "",
