--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "speech-synthesizer",
-  "version": "1.0.0",
+  "version": "1.0.10",
   "description": "Speech synthesis",
   "main": "dist/speech-synthesizer.js",
   "type": "module",
@@ -10,12 +10,13 @@
   "scripts": {
     "build": "npm run clean && tsc && npm run copy-files",
     "clean": "rimraf dist/",
-    "copy-files": "copyfiles -u 1 model/*.onnx dist/model/ && copyfiles -u 1 src/*.wasm dist/",
+    "copy-files": "copyfiles -u 1 model/*.onnx dist/model/ && copyfiles -u 1 src/espeak/*.wasm dist/",
     "prepublishOnly": "npm run build"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/debug": "^4.1.12",
     "@types/node": "^20.9.0",
     "@types/wav-encoder": "^1.3.3",
     "copyfiles": "^2.4.1",
@@ -23,13 +24,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@echogarden/espeak-ng-emscripten": "^0.1.2",
-    "@types/audiobuffer-to-wav": "^1.0.4",
-    "audiobuffer-to-wav": "^1.0.0",
-    "espeak": "^0.0.3",
-    "onnxruntime-node": "^1.16.2",
-    "onnxruntime-web": "^1.16.2",
-    "wav-encoder": "^1.3.0",
-    "wavefile": "^11.0.0"
+    "debug": "^4.3.4",
+    "onnxruntime-web": "1.16.1"
   }
 }
