--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "copy-files": "copyfiles -u 1 model/*.onnx dist/model/ && copyfiles -u 1 src/espeak/*.wasm dist/",
     "prepublishOnly": "npm run build"
   },
-  "author": "",
+  "author": "Ian Armour <ianmarmour@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@types/debug": "^4.1.12",
