--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "speech-synthesizer",
   "version": "1.0.0",
-  "description": "Speech synthesis",
+  "description": "A node.js library for locally synthesizing text to speech using VITS",
   "main": "dist/speech-synthesizer.js",
   "type": "module",
   "files": [
@@ -15,6 +15,16 @@
   },
   "author": "Ian Armour <ianmarmour@gmail.com>",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ianmarmour/speech-synthesizer.git"
+  },
+  "keywords": [
+    "speech",
+    "speech-synthesis",
+    "TTS",
+    "voice"
+  ],
   "devDependencies": {
     "@types/debug": "^4.1.12",
     "@types/node": "^20.9.0",
